# pipe-framework

./: .editorconfig  .flake8  .gitignore  .isort.cfg  Makefile  README.md  app.py  mypy.ini  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  tracking_issue.md
.github/workflows/: main.yml
docs/: .buildinfo  .generated-files.txt  config.toml  contents.html  genindex.html  index.html  index.md  mkdocs.yml  objects.inv  py-modindex.html  search.html  searchindex.js
docs-src/: conf.py
docs/.doctrees/: contents.doctree  environment.pickle  index.doctree
docs/.doctrees/api/: index.doctree
docs/.doctrees/pipe/: index.doctree
docs/.doctrees/pipes/: index.doctree
docs/_modules/: index.html  pipes.html
docs/_modules/pipes/: core.html
docs/_sources/: index.md.txt
docs/api/: conf.py  index.html  index.md
docs/content/: _index.md  index.md
docs/content/api/: core.md  generics.md  server.md
docs/pipes/: index.html
examples/example-form-page/: .gitignore  Makefile  app.py
examples/todo-api-example-app/: Makefile  app.py
examples/todo-api-example-app/src/: extract.py
examples/todo-api-example-app/templates/: index.html
keeneye/: app.py  requirements.txt
keeneye/db/: load.py
keeneye/extract/: jira.py
keeneye/load/: template.py
keeneye/src/common/: load.py  transform.py
keeneye/src/jira/: extract.py  transform.py
keeneye/static/css/: main.css
keeneye/templates/: index.html
keeneye/transform/: jira.py
mock-project/: app.py
mock-project/templates/: index.html
pipe-framework/: .flake8  .isort.cfg  .style.yapf  Makefile  Pipfile  pydoc-markdown.yml  requirements-dev.txt  requirements.txt  setup.py
pipe-framework/docs/: genindex.html  index.html  search.html  searchindex.js
pipe-framework/docs/.doctrees/: index.doctree
pipe-framework/docs/_modules/: index.html
pipe-framework/docs/pipe/: index.html
pipe-framework/docs/src/: conf.py  contents.rst  index.rst
pipe-framework/pipe/: __init__.py
pipe-framework/pipe/core/: __init__.py  abstract.py  base.py  data.py  decorators.py  exceptions.py  interface.py  mixins.py  utils.py  wrappers.py
pipe-framework/pipe/generics/: __init__.py  helpers.py  load.py
pipe-framework/pipe/server/: __init__.py  pipe.py  wrappers.py
pipe_framework/core/: __init__.py  base.py  decorators.py  factories.py  runner.py
pipe_framework/core/tests/: conftest.py  fixture.py  test_simple.py
pipe_framework/pipe/core/: base.py
pipe_framework/pipe/generics/: __init__.py  helpers.py
pipe_framework/pipe/server/: __init__.py  pipe.py
pipe_framework/pipe_alpha/core/: __init__.py  decorators.py
src/pipe/core/: base.py  (+1 more)
test/: extraction.py  loader.py  transformer.py
(+53 files in other folders)
