[tool.poetry]
name = "pipe-framework"
version = "0.1.0b"
description = "Data oriented web framework"
authors = ["Roman Latyshenko <rlatyshenko@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Werkzeug = "1.0.1"
Jinja2 = "2.11.3"
frozendict = "1.2"
orator = "0.9.9"
rich = "5.2.1"
valideer = "0.4.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.942"
docformatter = "^1.4"

[tool.poetry.scripts]
my-script = "poetry.console:run"

[tool.black]
include = '\.pyi?$'
target = ['310', '39', '38']
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.github
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
py_version = '310'

[tool.mypy]
python_version = '3.10'
no_site_packages = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venv = "pipe-framework-uiqW28C9-py3.10"
include = ["pipe_framework"]
exclude = ["pipe_framework/pipe_alpha"]
stubPath = "typings/"
